# Traffic-Flow

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  plan.md  plan_v2.md  pyproject.toml  requirements-base.txt  requirements-gpu.txt  run_server.bat  run_worker.bat
ai-core/: pyproject.toml
benchmark/: README.md  batch_runtime_eval.py  counting_eval.py  derived_gt.py  detection_eval.py  end_to_end_eval.py  live_runtime_eval.py  phase09_analysis.py  presets.json  run.py  run_benchmark.py  run_full_benchmark.py  tracking_eval.py
benchmark/baseline/: current_defaults.yaml  environment.json  model_inventory.json
benchmark/configs/: benchmark_protocol_v1.yaml  class_mapping_v1.yaml
benchmark/schemas/: benchmark_manifest.schema.json  run_summary.schema.json
benchmark/splits/: ua_detrac_inventory_v1.json  ua_detrac_split_v1.json
benchmark_results/: final_decision_v2.md  fps_results.csv  lane_only_summary_v2.md  method_status.md  qualitative_results.md  summary.md  system_info.md  tusimple_full_3model_comparison.md  tusimple_full_3model_summary.json
configs/: README.md
configs/danang/: cau_rong_manual.json
configs/examples/: traffic_01_manual.json
data/: README.md
docs/: API_INTEGRATION.md  HUONG_DAN_SU_DUNG.md  README.md  traffic_flow.md
docs/contracts/: annotation_roi.md  lane_config_with_annotation_roi.json  progress_callback.md  result_sample.json  video_counting_result.md
docs/portfolio/: ai-pipeline.md  benchmark-methodology.md  error-analysis.md  lane-geometry-and-counting.md  limitations.md  project-scope-and-ownership.md  recruiter-overview.md  release-checklist.md  tracking-design.md
docs/raw/: README.md
docs/reports/: end-to-end-bytetrack-production-comparison.md  phase-00-repository-audit.md  phase-01-benchmark-protocol.md  phase-02-derived-ground-truth.md  phase-03-benchmark-runner.md  phase-04-detection-benchmark.md  (+8 more)
frontend/: .gitignore  frontend_requirements.md  index.html  main.html  package-lock.json  package.json
inference/: Dockerfile
models/: README.md
scratch/: clear_db.py  debug_task.py  dump_db.py  inspect_task.py  inspect_track_history.py  list_tasks.py  mock_worker.py  plot_lane.py  scratch_db.py  simulate_counting.py  simulate_uncropped.py  test_ai_cropped.py  test_ai_detect.py  test_ai_direct.py  test_ai_real_video.py  test_api.py  test_cv2_codec.py  test_db.py  test_full_video.py  test_motorcycle.py  test_poly_bug.py  test_video_url.py  trigger_processing.py  trigger_test.py  video_quality_diagnostic.py
scripts/: batch_danang_smoke.py  benchmark_fps.py  check_connections.py  collect_system_info.py  extract_frames.py  extract_preview_frames.py  lane_schema.py  requirements.txt  run_laneatt_video.py  run_polylanenet_video.py  run_server.bat  run_ufld.py  run_ufld_video.py  run_worker.bat  smoke_test_manual_counting.py
tests/: __init__.py  test_api_integration.py  test_cli.py  test_config.py  test_counting_methods.py  test_geometry.py  test_live_stream_hardening.py  test_roi.py  test_roi_extended.py  test_runtime_engine.py  test_worker_counting_service.py
trafficflow_integration/: lane_schema.md  sample_lane_output.json
(+171 files in other folders)
