[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trafficflow"
version = "0.1.0"
description = "Reusable AI runtime engine for traffic video counting (YOLOv8 + ByteTrack)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }

# Core runtime dependencies for the reusable engine library.
# Backend/worker code installs this package and calls trafficflow.runtime.
# Heavy GPU/inference deps live in the optional [gpu] extra below.
dependencies = [
    "opencv-python",
    "numpy",
]

[project.optional-dependencies]
# Inference stack required to actually run TrafficFlowEngine.process_video().
# PyTorch CUDA wheels are NOT listed here on purpose: they must be installed
# from the official CUDA wheel index, e.g.
#   pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu130
gpu = [
    "ultralytics",
    "lap>=0.5.12",
    "scipy",
]

# Optional: run the local CLI adapters and test suite.
cli = [
    "tqdm",
    "PyYAML",
]
dev = [
    "pytest",
    "psutil",
]

[tool.setuptools.packages.find]
# Ship only the reusable AI-core library modules. Backend-owned boundaries
# (api/worker/queue/storage/observability) and CLI are intentionally excluded
# from the runtime distribution.
include = [
    "trafficflow",
    "trafficflow.runtime*",
    "trafficflow.core_ai*",
    "trafficflow.counting*",
    "trafficflow.geometry*",
    "trafficflow.pipeline*",
]

[tool.setuptools.package-data]
trafficflow = ["py.typed"]
