[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trafficflow"
version = "0.2.0"
description = "TrafficFlow — vehicle counting platform (API + worker + AI engine)."
requires-python = ">=3.10"
license = { text = "Proprietary" }

dependencies = [
    "opencv-python",
    "numpy",
]

[project.optional-dependencies]
worker = [
    "celery",
    "redis",
    "requests",
    "urllib3",
]
api = [
    "fastapi",
    "uvicorn",
    "motor",
    "apscheduler",
    "boto3",
    "python-multipart",
]
gpu = [
    "ultralytics",
    "lap>=0.5.12",
    "scipy",
    "torch",
    "torchvision",
]
dev = [
    "pytest",
    "psutil",
]

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "tfengine",
    "tfengine.runtime*",
    "tfengine.core_ai*",
    "tfengine.counting*",
    "tfengine.geometry*",
    "tfengine.pipeline*",
    "tfengine.cli*",
]

[tool.setuptools.package-data]
tfengine = ["py.typed"]
