[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tfengine"
version = "0.1.0"
description = "Reusable AI runtime engine for traffic video counting (YOLOv8 + ByteTrack)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }

# Source moved to src/tfengine/. Install from root:
#   pip install -e . --config-settings --editable-pkg-dir=src/tfengine
# Or use the root pyproject.toml.
